When selected a texture in the Properties panel shows another texture in the 3D Viewport. #88788

Closed
opened 2021-06-03 12:00:55 +02:00 by Bulat · 14 comments

System Information
Operating system: Windows-10-10.0.14393-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 23.20.16.4944

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: (newest version of Blender that worked as expected)

Short description of error
When selected a texture in the Properties panel shows another texture in the 3D Viewport. In version 2.92, the same thing.

Exact steps for others to reproduce the error
TextureShow.mp4

**System Information** Operating system: Windows-10-10.0.14393-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 23.20.16.4944 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: (newest version of Blender that worked as expected) **Short description of error** When selected a texture in the Properties panel shows another texture in the 3D Viewport. In version 2.92, the same thing. **Exact steps for others to reproduce the error** [TextureShow.mp4](https://archive.blender.org/developer/F10155651/TextureShow.mp4)
Author

Added subscriber: @BulatKR

Added subscriber: @BulatKR
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Can you please provide .blende file?

Can you please provide .blende file?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
[WrongShowTexture.blend](https://archive.blender.org/developer/F10155774/WrongShowTexture.blend)
Philipp Oeser self-assigned this 2021-06-03 14:22:05 +02:00
Member

Can confirm, will check

Can confirm, will check
Member

Thanks! I can reproduce this for 2.92.0, 2.93.0LTS and 3.0.0 (Hash: 711ddea60e , commit date: 2021-06-02) also (not tested for < 2.92.0)

For me this looks like a bug ( I can see @lichtwerk here, so will let him decide)

(not again, Philipp commented when I was typing so ignore my comment :))

Thanks! I can reproduce this for 2.92.0, 2.93.0LTS and 3.0.0 (Hash: `711ddea60e` , commit date: `2021-06-02`) also (not tested for < 2.92.0) For me this looks like a bug ( I can see @lichtwerk here, so will let him decide) (not again, Philipp commented when I was typing so ignore my comment :))
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 3b2a01edf6

This issue was referenced by 3b2a01edf698fb27d9984fe12eb210df5246f16c

This issue was referenced by b0cb0a7854

This issue was referenced by b0cb0a78547582848f5f18f5d5cc85c69f3dbe30

This issue was referenced by d354e6a846

This issue was referenced by d354e6a84688948aac39b1402c35295ccbd3a013

This issue was referenced by 56005ef499

This issue was referenced by 56005ef499894bcd48313e3df7ec965fe516c1dc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Think all issues are resolved now, so will close.

Note only 56005ef499 will be in LTS (I think), so the full suite will only be available in 3.0.

Think all issues are resolved now, so will close. Note only 56005ef499 will be in LTS (I think), so the full suite will only be available in 3.0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88788
No description provided.